[package]
name = "chatgpt_wd"
version = "0.1.6"
edition = "2021"
authors = ["Mack Straight <eizneckam@gmail.com>"]
description = "personalize your web experience"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "4"
futures-util = "0.3"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.31"
tokio = { version = "1.26", features = ["full"] }
tokio-stream = "0.1"